...
    <ImageButton
        android:id="@+id/exoPlayerOpenNew"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/exoPlayerPrevious"
        android:src="@drawable/ic_open_in_new_white_24dp"
        android:background="?android:attr/selectableItemBackground"
        android:layout_margin="4dp"
        />

    <ImageButton
        android:id="@+id/exoPlayerPrevious"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/exoPlayerNext"
        android:src="@drawable/ic_previous_white_24px"
        android:background="?android:attr/selectableItemBackground"
        android:layout_margin="4dp"
        />

    <ImageButton
...
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:textSize="14sp"
        android:textColor="#cfff" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/exoPlayerExtraControls"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
                android:id="@+id/exo_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/exo_050x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:text="0.5×" />

                <RadioButton
                    android:id="@+id/exo_075x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:text="0.75×" />

                <RadioButton
                    android:id="@+id/exo_100x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:text="1×" />

            </RadioGroup>

            <ImageButton android:id="@id/exo_repeat_toggle"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ExoMediaButton"/>

            <ImageButton android:id="@id/exo_prev"
...
