<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Teckenspråkslexikon</string>
    <string name="search_hint">Sök i lexikonet</string>
    <string name="settings">Inställningar</string>
    <string name="no_results"><![CDATA[
        <strong>Din sökning (<em>%1$s</em>) gav tyvärr inga träffar.</strong>

        <p><a href="%2$s">Sök efter <em>%1$s</em> på teckensprakslexikon.su.se</a>.
    ]]></string>
    <string name="no_bookmarks">Du har inga bokmärkta tecken.</string>
    <string name="no_history">Du har inte öppnat några tecken.</string>
    <string name="sign">Tecken</string>
    <string name="signs">Tecken</string>
    <string name="examples">Exempelmeningar</string>
    <string name="relations">Relaterat</string>
    <string name="other_signs">Andra tecken med samma betydelse</string>
    <string name="other_meanings">Tecknet kan också betyda</string>
    <string name="add_bookmark">Lägg till bokmärke</string>
    <string name="remove_bookmark">Radera bokmärke</string>
    <string name="topics">Ämnen</string>
    <string name="subtopics">Underordnade ämnen</string>
    <string name="parent_topic">Överordnat ämne</string>
    <string name="fail_video_play">Det gick inte att spela upp videon.</string>
    <string name="fail_offline">Internetåtkomst saknas.</string>
    <string name="fail_database">Det gick inte att uppdatera databasen.</string>
    <string name="fail_tts">Det gick inte att läsa upp översättningen.</string>
    <string name="random_signs">Slumpmässigt utvalda tecken</string>
    <string name="recently_seen">Nyligen öppnade tecken</string>
    <string name="clear_search_box">Rensa sökfältet</string>
    <string name="clear_search_history">Rensa sökhistorik</string>
    <string name="clear_sign_history">Rensa visningshistorik</string>
    <string name="remove_all_bookmarks">Ta bort alla bokmärken</string>
    <string name="open_in_browser">Öppna i webbläsare</string>
    <string name="find_simliar">Hitta liknande tecken</string>
    <string name="open_source_licenses">Licenser för öppen källkod</string>
    <string name="about">Om</string>
    <string name="about_the_app">Om appen</string>
    <string name="clear">Rensa</string>
    <string name="accessibility">Tillgänglighet</string>
    <string name="tts">Läs upp översättningar</string>

    <string name="reverse_search">Teckenväljare</string>

    <string name="show_matching_signs">Visa matchande tecken</string>
    <string name="matching_signs">Matchande tecken</string>

    <string name="action">Rörelse</string>
    <string name="add_action">Lägg till rörelse</string>
    <string name="add_segment">Lägg till segment</string>
    <string name="reset">Nollställ</string>

    <string name="unorganized_bookmarks">Osorterade bokmärken</string>
    <string name="add_folder">Skapa mapp</string>
    <string name="delete_folder">Ta bort mapp</string>
    <string name="delete_folder_x">Ta bort mappen %1$s?</string>
    <string name="name">Namn</string>
    <string name="ok">OK</string>
    <string name="cancel">Avbryt</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>

    <string name="title_home">Hem</string>
    <string name="title_history">Historik</string>
    <string name="title_favorites">Bokmärken</string>

    <string name="search_help" formatted="false"><![CDATA[
        <strong>Söktips</strong>

        <p>Använd sökrutan för att hitta tecken, exempelmeningar och ämnen.
        Prova att söka på t.ex. <a href="handalfabet">handalfabet</a>, <a href="chans">chans</a>,
        <a href="har_inte">har inte</a>, <a href="9330">9330</a> eller <a href="igelkott">igelkott</a>.

        <p>Det finns även begränsat stöd för att söka i transkriptionerna.  Prova t.ex.
        <a href="flyghänder_vrids">flyghänder vrids</a> (som hittar <em>tidig</em>, <em>fest</em> med mera)
        eller
        <a href="tumh_nedåtv_brös">tumh nedåtv brös</a> (som hittar <em>rolig</em>, <em>själv</em> med mera).
        ]]>
    </string>

    <string name="about_html" formatted="false"><![CDATA[
        <h1>Teckenspråkslexikon</h1>

        <strong>Allt innehåll</strong> i appen är hämtat från
        <a href="https://www.ling.su.se/teckenspr%C3%A5ksresurser/teckenspr%C3%A5kslexikon/">Svenskt teckenspråkslexikon</a>
        som tillhandahålls av
      <a href="https://www.ling.su.se/teckenspr%C3%A5k">Avdelningen för teckenspråk, Institutionen för lingvistik, Stockholms universitet</a>
        under licensen
        <a href="http://creativecommons.org/licenses/by-nc-sa/2.5/se/">Creative Commons Erkännande-IckeKommersiell-DelaLika 2.5 Sverige</a>.

        <p>Själva appen är inte utgiven av Stockholms universitet, och databasen uppdateras något oregelbundet,
        så kolla gärna <a href="http://teckensprakslexikon.su.se/">webbversionen</a> först innan
        du rapporterar eventuella fel i innehållet till institutionen.</p>

        <hr/>

        <strong>Typsnittet</strong> som används i teckentranskriptionerna är <a href="https://zrajm.github.io/freesans-swl/">FreeSans-SWL</a>,
        som är tillgängligt under licensen <a href="https://github.com/zrajm/freesans-swl/blob/master/LICENSE">GNU General Public License</a>.

        <p>Är du nyfiken på vad transkriptionssymbolerna betyder?  Läs artikeln <em><a href="https://zrajm.github.io/teckentranskription/intro.html">
        Att transkribera teckenspråk</a></em> som skrivits av typsnittskonstruktören.

        <hr/>

        <p><a href="https://github.com/vitkyrka/tsplex/blob/master/PRIVACY.md">Integritetspolicy</a>.</p>

        Har du <strong>förbättringsförslag eller andra synpunkter</strong> på appen?
        <a href="mailto:tsplex.app@gmail.com?subject=Teckenspråkslexikon">Kontakta apputvecklaren.</a>

        <p>Gillar du appen?  Betygsätt gärna den på <a href="https://play.google.com/store/apps/details?id=in.rab.tsplex">Google Play</a>.
        Tack!
    ]]>
    </string>


</resources>
