<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/exoPlayerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:auto_show="false"
        app:use_controller="true"
        app:repeat_toggle_modes="all" />

    <ProgressBar
        android:id="@+id/loadingProgress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:choiceMode="singleChoice"
        android:listSelector="#9ca6dc" />

    <EditText
        android:id="@+id/filterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_search_black_24dp"
        android:drawableTint="@color/primary"
        android:padding="4dp"
        android:layout_margin="4dp"
        android:background="@drawable/listfilter"
        android:textColor="#000"
        android:textSize="14sp"
        android:maxLines="1"
        android:inputType="textFilter"
        android:hint="@string/filter_list" />

</LinearLayout>
