...
            android:elevation="4dp"
            app:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light">


            <EditText
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="?colorOnSurface"
                android:textColorHint="@color/hint"
                android:inputType="text"
...
            android:id="@+id/emptyQueryInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/noResults"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_results"
                android:textSize="16sp"
                android:textColor="?colorOnBackground"
...
